made necessary changes

--- a/Vaccine Distribution System/VaccineDistrubutionSystem/src/userinterface/ProviderWorkArea.form
+++ b/Vaccine Distribution System/VaccineDistrubutionSystem/src/userinterface/ProviderWorkArea.form
@@ -16,17 +16,17 @@
   <Layout>
     <DimensionLayout dim="0">
       <Group type="103" groupAlignment="0" attributes="0">
-          <Component id="providerWorkAreaJPanel" alignment="1" pref="862" max="32767" attributes="0"/>
+          <Component id="providerWorkAreaJPanel" alignment="1" max="32767" attributes="0"/>
       </Group>
     </DimensionLayout>
     <DimensionLayout dim="1">
       <Group type="103" groupAlignment="0" attributes="0">
-          <Component id="providerWorkAreaJPanel" alignment="1" pref="620" max="32767" attributes="0"/>
+          <Component id="providerWorkAreaJPanel" alignment="1" max="32767" attributes="0"/>
       </Group>
     </DimensionLayout>
   </Layout>
   <SubComponents>
-    <Container class="keeptoo.KGradientPanel" name="providerWorkAreaJPanel">
+    <Container class="org.netbeans.modules.form.InvalidComponent" name="providerWorkAreaJPanel">
 
       <Layout>
         <DimensionLayout dim="0">
@@ -108,9 +108,6 @@
           <Properties>
             <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
               <Font name="Product Sans" size="36" style="1"/>
-            </Property>
-            <Property name="foreground" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
-              <Color blue="ff" green="ff" red="ff" type="rgb"/>
             </Property>
             <Property name="text" type="java.lang.String" value="PROVIDER WORK AREA"/>
           </Properties>
