--- a/Vaccine Distribution System/VaccineDistrubutionSystem/src/userinterface/HospitalAdminRole/ManageHospitalJPanle.form
+++ b/Vaccine Distribution System/VaccineDistrubutionSystem/src/userinterface/HospitalAdminRole/ManageHospitalJPanle.form
@@ -39,7 +39,7 @@
                       <Component id="jButton2" min="-2" max="-2" attributes="0"/>
                   </Group>
               </Group>
-              <EmptySpace pref="15" max="32767" attributes="0"/>
+              <EmptySpace max="32767" attributes="0"/>
           </Group>
       </Group>
     </DimensionLayout>
@@ -58,7 +58,7 @@
               </Group>
               <EmptySpace min="-2" pref="39" max="-2" attributes="0"/>
               <Component id="jButton2" min="-2" max="-2" attributes="0"/>
-              <EmptySpace pref="90" max="32767" attributes="0"/>
+              <EmptySpace pref="66" max="32767" attributes="0"/>
           </Group>
       </Group>
     </DimensionLayout>
