--- a/Vaccine Distribution System/VaccineDistrubutionSystem/src/userinterface/AdministrativeRole/ManageEmployeeJPanel.form
+++ b/Vaccine Distribution System/VaccineDistrubutionSystem/src/userinterface/AdministrativeRole/ManageEmployeeJPanel.form
@@ -26,7 +26,7 @@
                   </Group>
                   <Group type="102" alignment="0" attributes="0">
                       <EmptySpace min="-2" pref="111" max="-2" attributes="0"/>
-                      <Group type="103" groupAlignment="0" attributes="0">
+                      <Group type="103" groupAlignment="0" max="-2" attributes="0">
                           <Component id="jScrollPane1" min="-2" pref="480" max="-2" attributes="0"/>
                           <Group type="102" alignment="0" attributes="0">
                               <Group type="103" groupAlignment="0" attributes="0">
@@ -36,7 +36,7 @@
                               <EmptySpace min="-2" pref="32" max="-2" attributes="0"/>
                               <Group type="103" groupAlignment="0" attributes="0">
                                   <Component id="nameJTextField" min="-2" pref="126" max="-2" attributes="0"/>
-                                  <Component id="organizationEmpJComboBox" min="-2" pref="81" max="-2" attributes="0"/>
+                                  <Component id="organizationEmpJComboBox" max="32767" attributes="0"/>
                               </Group>
                           </Group>
                           <Component id="addJButton" alignment="0" min="-2" max="-2" attributes="0"/>
