--- a/Vaccine Distribution System/VaccineDistrubutionSystem/src/userinterface/AdministrativeRole/ManageOrganizationJPanel.form
+++ b/Vaccine Distribution System/VaccineDistrubutionSystem/src/userinterface/AdministrativeRole/ManageOrganizationJPanel.form
@@ -30,7 +30,7 @@
                               <EmptySpace min="-2" pref="32" max="-2" attributes="0"/>
                               <Component id="organizationJComboBox" max="32767" attributes="0"/>
                           </Group>
-                          <Component id="jScrollPane1" min="-2" pref="480" max="-2" attributes="0"/>
+                          <Component id="jScrollPane1" alignment="1" min="-2" pref="480" max="-2" attributes="0"/>
                           <Component id="addJButton" alignment="0" min="-2" max="-2" attributes="0"/>
                       </Group>
                   </Group>
