some more commits

--- a/Vaccine Distribution System/VaccineDistrubutionSystem/src/userinterface/AdministrativeRole/ManageOrganizationJPanel.form
+++ b/Vaccine Distribution System/VaccineDistrubutionSystem/src/userinterface/AdministrativeRole/ManageOrganizationJPanel.form
@@ -35,7 +35,7 @@
                       </Group>
                   </Group>
               </Group>
-              <EmptySpace pref="184" max="32767" attributes="0"/>
+              <EmptySpace pref="152" max="32767" attributes="0"/>
           </Group>
       </Group>
     </DimensionLayout>
@@ -114,6 +114,9 @@
           </StringArray>
         </Property>
       </Properties>
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="organizationJComboBoxActionPerformed"/>
+      </Events>
     </Component>
     <Component class="javax.swing.JLabel" name="jLabel1">
       <Properties>
