--- a/Vaccine Distribution System/VaccineDistrubutionSystem/src/userinterface/LogisticsRole/LogisticsWorkAreaJPanel.form
+++ b/Vaccine Distribution System/VaccineDistrubutionSystem/src/userinterface/LogisticsRole/LogisticsWorkAreaJPanel.form
@@ -119,7 +119,7 @@
           <Font name="Product Sans" size="24" style="1"/>
         </Property>
         <Property name="horizontalAlignment" type="int" value="0"/>
-        <Property name="text" type="java.lang.String" value="LOGISTICS WORK AREA"/>
+        <Property name="text" type="java.lang.String" value="Logistic Work Area"/>
       </Properties>
     </Component>
   </SubComponents>
