--- a/Vaccine Distribution System/VaccineDistrubutionSystem/src/userinterface/ProviderRole/ProviderWorkAreaJPanel.form
+++ b/Vaccine Distribution System/VaccineDistrubutionSystem/src/userinterface/ProviderRole/ProviderWorkAreaJPanel.form
@@ -108,7 +108,7 @@
           <Font name="Product Sans" size="24" style="1"/>
         </Property>
         <Property name="horizontalAlignment" type="int" value="0"/>
-        <Property name="text" type="java.lang.String" value="PROVIDER WORK AREA"/>
+        <Property name="text" type="java.lang.String" value="Provider Work Area"/>
       </Properties>
       <Constraints>
         <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout" value="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout$AbsoluteConstraintsDescription">
